
** More std types
Added more standard types.

** Folded `cast` help
Help for new-style casts has been folded into the same line for C-style casts.

** `type` in `define`
**cdecl** now allows the word `type` to appear in a `define` command, e.g.:

    define PI as pointer to int
    define PI as type pointer to int    // same as above

** Showing `inline namespace` types
Showing `inline namespace` types as gibberish has been fixed.

** Types in error & warning messages
The offending type is now included in error messages.  For example:

    cdecl> explain void f(double d, int x[d])
                                         ^
    31: error: invalid array dimention type "double"; must be integral

If the type is a `typedef`, also prints `aka` followed by its underlying type:

   c++decl> explain std::size_t operator new( std::size_t )
                    ^
   9: error: invalid operator "new" return type "std::size_t" (aka, "unsigned long"); must be "void*"


* Changes in Cdecl 14.4

** `_Alignas` forward declarations
`_Alignas` is now correctly forbidden on forward declarations.

** `auto` with multiple declarators in C
`auto` with multiple declarators is now correctly forbidden in C.

** `auto *p` in C
`auto` with a pointer declarator is now correctly forbidden in C.

** Bit-field `typedef`s for `enum`s
A bit-field of a `typedef` for an `enum` is now correctly forbidden in C:

    typedef enum E T
    explain T x : 4                     // error: enum bit-field is illegal

** `const` `typedef` of reference
**cdecl** will now warn about applying `const` to a reference `typedef`:

    c++decl> using rint = int&;
    c++decl> explain const rint x
                     ^
    9: warning: "const" on reference type has no effect

** Reference to function or reference
**cdecl** now correctly allows references to function and references.

** Reworked qualified array syntax
C99 added the ability to qualify function parameters using array syntax, e.g.:
